change image path

--- a/email.html
+++ b/email.html
@@ -62,7 +62,7 @@
 							<tr><td align="center">
 								<div>
 									<div>
-										<a href="#" target="_blank" style="font-family: Arial, Helvetica, sans-serif; font-size: 13px; color: #2f3f49;"><img src="https://eimage.sendsay.ru/image/x_1697444483945161/new/logo3.png" width="187" alt="" border="0" style="display: block; max-width: 187px; width: 100%;" class="w187px"></a>
+										<a href="#" target="_blank" style="font-family: Arial, Helvetica, sans-serif; font-size: 13px; color: #2f3f49;"><img src="https://oniichan1311.github.io/email_examle/images_email/logo3.png" width="187" alt="" border="0" style="display: block; max-width: 187px; width: 100%;" class="w187px"></a>
 									</div>
 								</div>
 							</td></tr>
@@ -90,7 +90,7 @@
 				<tr><td align="center" bgcolor="#000000">
 					<div>
 						<div>
-							<img src="https://eimage.sendsay.ru/image/x_1697444483945161/new/creative.jpg" width="600" alt="" border="0" style="display: block; max-width: 600px; width: 100%;" class="w600px">
+							<img src="https://oniichan1311.github.io/email_examle/images_email/creative.jpg" width="600" alt="" border="0" style="display: block; max-width: 600px; width: 100%;" class="w600px">
 						</div>
 					</div>
 				</td></tr>
@@ -153,7 +153,7 @@
 								<div>
 									<div style="height: 15px; line-height: 15px; font-size: 13px;">&nbsp;</div> 
 									<div>
-										<img src="https://eimage.sendsay.ru/image/x_1697444483945161/new/creative2.jpg" width="522" alt="" border="0" style="display: block; max-width: 522px; width: 100%;" class="w522px">
+										<img src="https://oniichan1311.github.io/email_examle/images_email/creative2.jpg" width="522" alt="" border="0" style="display: block; max-width: 522px; width: 100%;" class="w522px">
 									</div> 
 									<div style="height: 21px; line-height: 21px; font-size: 19px;">&nbsp;</div> 
 									<div style="line-height: 24px;">
@@ -174,7 +174,7 @@
 								<div>
 									<div style="height: 21px; line-height: 21px; font-size: 19px;">&nbsp;</div> 
 									<div>
-										<img src="https://eimage.sendsay.ru/image/x_1697444483945161/new/creative3.jpg" width="522" alt="" border="0" style="display: block; max-width: 522px; width: 100%;" class="w522px">
+										<img src="https://oniichan1311.github.io/email_examle/images_email/creative3.jpg" width="522" alt="" border="0" style="display: block; max-width: 522px; width: 100%;" class="w522px">
 									</div> 
 									<div style="height: 21px; line-height: 21px; font-size: 19px;">&nbsp;</div> 
 									<div style="line-height: 24px;">
@@ -195,7 +195,7 @@
 								<div>
 									<div style="height: 21px; line-height: 21px; font-size: 19px;">&nbsp;</div> 
 									<div>
-										<img src="https://eimage.sendsay.ru/image/x_1697444483945161/new/creative4.jpg" width="522" alt="" border="0" style="display: block; max-width: 522px; width: 100%;" class="w522px">
+										<img src="https://oniichan1311.github.io/email_examle/images_email/creative4.jpg" width="522" alt="" border="0" style="display: block; max-width: 522px; width: 100%;" class="w522px">
 									</div> 
 									<div style="height: 21px; line-height: 21px; font-size: 19px;">&nbsp;</div> 
 									<div style="line-height: 24px;">
@@ -216,7 +216,7 @@
 								<div>
 									<div style="height: 21px; line-height: 21px; font-size: 19px;">&nbsp;</div> 
 									<div>
-										<img src="https://eimage.sendsay.ru/image/x_1697444483945161/new/creative5.jpg" width="522" alt="" border="0" style="display: block; max-width: 522px; width: 100%;" class="w522px">
+										<img src="https://oniichan1311.github.io/email_examle/images_email/creative5.jpg" width="522" alt="" border="0" style="display: block; max-width: 522px; width: 100%;" class="w522px">
 									</div> 
 									<div style="height: 21px; line-height: 21px; font-size: 19px;">&nbsp;</div> 
 									<div style="line-height: 24px;">
@@ -237,7 +237,7 @@
 								<div>
 									<div style="height: 21px; line-height: 21px; font-size: 19px;">&nbsp;</div> 
 									<div>
-										<img src="https://eimage.sendsay.ru/image/x_1697444483945161/new/creative6.png" width="522" alt="" border="0" style="display: block; max-width: 522px; width: 100%;" class="w522px">
+										<img src="https://oniichan1311.github.io/email_examle/images_email/creative6.png" width="522" alt="" border="0" style="display: block; max-width: 522px; width: 100%;" class="w522px">
 									</div> 
 									<div style="height: 21px; line-height: 21px; font-size: 19px;">&nbsp;</div> 
 									<div style="line-height: 24px;">
@@ -303,7 +303,7 @@
 																	<div>
 																		<table border="0" cellspacing="0" cellpadding="0" width="140" class="mob_100" style="width: 140px;">
 																		<tr><td align="left" valign="middle">
-																			<img src="https://eimage.sendsay.ru/image/x_1697444483945161/new/check.png" width="36" height="36" alt="" border="0" style="display: block;"> 
+																			<img src="https://oniichan1311.github.io/email_examle/images_email/check.png" width="36" height="36" alt="" border="0" style="display: block;"> 
 																			<div style="height: 11px; line-height: 11px; font-size: 9px;">&nbsp;</div> 
 																			<div style="line-height: 18px;">
 																				<span style="font-family: Arial, Helvetica, sans-serif; font-size: 12px; color: #2f3f49;">Уникальные подборки работ с&nbsp;авторскими рецензиями</span>
@@ -347,7 +347,7 @@
 																	<div>
 																		<table border="0" cellspacing="0" cellpadding="0" width="140" class="mob_100" style="width: 140px;">
 																		<tr><td align="left" valign="middle">
-																			<img src="https://eimage.sendsay.ru/image/x_1697444483945161/new/calendar.png" width="36" height="36" alt="" border="0" style="display: block;"> 
+																			<img src="https://oniichan1311.github.io/email_examle/images_email/calendar.png" width="36" height="36" alt="" border="0" style="display: block;"> 
 																			<div style="height: 11px; line-height: 11px; font-size: 9px;">&nbsp;</div> 
 																			<div style="line-height: 18px;">
 																				<span style="font-family: Arial, Helvetica, sans-serif; font-size: 12px; color: #2f3f49;">Возможность настроить нашу рассылку под&nbsp;свой личный вкус</span>
@@ -391,7 +391,7 @@
 																	<div>
 																		<table border="0" cellspacing="0" cellpadding="0" width="140" class="mob_100" style="width: 140px;">
 																		<tr><td align="left" valign="middle">
-																			<img src="https://eimage.sendsay.ru/image/x_1697444483945161/new/arrow.png" width="36" height="36" alt="" border="0" style="display: block;"> 
+																			<img src="https://oniichan1311.github.io/email_examle/images_email/arrow.png" width="36" height="36" alt="" border="0" style="display: block;"> 
 																			<div style="height: 11px; line-height: 11px; font-size: 9px;">&nbsp;</div> 
 																			<div style="line-height: 18px;">
 																				<span style="font-family: Arial, Helvetica, sans-serif; font-size: 12px; color: #2f3f49;">У&nbsp;вас есть пожелания и&nbsp;предложения?Напишите нам в&nbsp;ответ на&nbsp;это письмо!</span>
@@ -473,13 +473,13 @@
 						<tr><td align="center" valign="top">
 							<table border="0" cellspacing="0" cellpadding="0" width="143" style="width: 143px;">
 							<tr><td align="left" valign="middle" width="35" style="width: 35px;">
-								<a href="#" target="_blank" style="font-family: Arial, Helvetica, sans-serif; font-size: 13px; color: #323e49;"><img src="https://eimage.sendsay.ru/image/x_1697444483945161/new/vk.png" width="35" height="35" alt="vk" border="0" style="display: block;"></a>
+								<a href="#" target="_blank" style="font-family: Arial, Helvetica, sans-serif; font-size: 13px; color: #323e49;"><img src="https://oniichan1311.github.io/email_examle/images_email/vk.png" width="35" height="35" alt="vk" border="0" style="display: block;"></a>
 							</td> 
 							<td align="center" valign="middle" width="35" style="width: 35px;">
-								<a href="#" target="_blank" style="font-family: Arial, Helvetica, sans-serif; font-size: 13px; color: #323e49;"><img src="https://eimage.sendsay.ru/image/x_1697444483945161/new/instagram.png" width="35" height="35" alt="tg" border="0" style="display: block;"></a>
+								<a href="#" target="_blank" style="font-family: Arial, Helvetica, sans-serif; font-size: 13px; color: #323e49;"><img src="https://oniichan1311.github.io/email_examle/images_email/instagram.png" width="35" height="35" alt="tg" border="0" style="display: block;"></a>
 							</td> 
 							<td align="right" valign="middle" width="35" style="width: 35px;">
-								<a href="#" target="_blank" style="font-family: Arial, Helvetica, sans-serif; font-size: 13px; color: #323e49;"><img src="https://eimage.sendsay.ru/image/x_1697444483945161/new/fb.png" width="35" height="35" alt="" border="0" style="display: block;"></a>
+								<a href="#" target="_blank" style="font-family: Arial, Helvetica, sans-serif; font-size: 13px; color: #323e49;"><img src="https://oniichan1311.github.io/email_examle/images_email/fb.png" width="35" height="35" alt="" border="0" style="display: block;"></a>
 							</td></tr>
 							</table> 
 							<table border="0" cellspacing="0" cellpadding="0" width="247" align="center" style="width: 247px;">
